<!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity">Udacity</string>
    <string name="address1">2465 Latham St,</string>
    <string name="address2">Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website">www.udacity.com</string>
</resources>
